--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: Arial, sans-serif;
+  background: #eedb9b;
 }
 
 .container {
